--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@langchain/community": "^0.3.10",
+    "@langchain/core": "^0.3.15",
+    "@langchain/openai": "^0.3.11",
     "@supabase/supabase-js": "^2.45.6",
+    "langchain": "^0.3.4",
     "next": "14.2.15",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1"
+  },
+  "resolutions": {
+    "@langchain/core": "^0.3.15"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -24,6 +31,6 @@
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.6.3"
   }
 }
