--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.37.2",
     "@heroicons/react": "^2.1.5",
     "@langchain/community": "^0.3.10",
     "@langchain/core": "^0.3.16",
@@ -16,6 +17,7 @@
     "@supabase/supabase-js": "^2.45.6",
     "langchain": "^0.3.5",
     "next": "14.2.15",
+    "next-auth": "^4.24.10",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1"
